cmake_minimum_required(VERSION 3.23)
project(labs_work)

set(CMAKE_CXX_STANDARD 14)

add_executable(A A/A.cpp)
add_executable(B B/B.cpp)
add_executable(C C/C.cpp)
add_executable(D D/D.cpp)
add_executable(E E/E.cpp)
add_executable(F F/F.cpp)
add_executable(G G/G.cpp)
add_executable(H H/H.cpp)
add_executable(I I/I.cpp)
add_executable(J J/J.cpp)
#add_executable(K K/K.cpp)
